<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"     
    android:focusableInTouchMode="true" 
    android:layout_alignParentBottom="true" 
    android:fitsSystemWindows="true"
    >
   <!--android:fitsSystemWindows="true" 看看去掉有什么后果 -->
       <LinearLayout
            android:id="@+id/table_num_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="#c8cbcc"
            android:orientation="vertical"
            android:visibility="gone"
        
           >
  
            <LinearLayout style="@style/layout_input_amount_style">

                <Button
                  
                    android:id="@+id/btn_jia"
                    style="@style/btn_input_amount_style"
                   android:background="@drawable/keyboard_style"
                    android:text="+" />

                <Button
                    android:id="@+id/btn_jian"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="-" />

                <Button
                    android:id="@+id/btn_cheng"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="×" />
                 <Button
                    android:id="@+id/btn_chu"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="÷" />
                  <Button
                    android:id="@+id/btn_dengyu"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="=" />
                   <Button
                    android:id="@+id/btn_nodengyu"
                    style="@style/btn_input_amount_style"
                  android:background="@drawable/keyboard_style"
                    android:text="≠" />
                        <Button
                    android:id="@+id/btn_shanchu"
                    style="@style/btn_input_amount_style"
                   android:background="@drawable/keyboard_style"
                    android:text="←" />
                   
            </LinearLayout>
          
         
            
            
            
             <LinearLayout style="@style/layout_input_amount_style">

                <Button
                    android:id="@+id/btn_dayu"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text=">" />

                <Button
                    android:id="@+id/dayu_"
                    style="@style/btn_input_amount_style"
                  android:background="@drawable/keyboard_style"
                    android:text="≥" />

                <Button
                    android:id="@+id/xiaoyu"
                    style="@style/btn_input_amount_style"
                     android:background="@drawable/keyboard_style"
                    android:text="@string/xiaoyu"/>"
                 <Button
                    android:id="@+id/xiaoyu_"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="@string/xiaoyudengyu"/>
                  <Button
                    android:id="@+id/duihao"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="√" />
                   <Button
                    android:id="@+id/btn_cuohao"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="×" />
                    <Button
                    android:id="@+id/btn_gantai"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="!" />
                 
            </LinearLayout>
            
                     <LinearLayout style="@style/layout_input_amount_style">
                        <Button
                    
                    android:id="@+id/btn_xinghao"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="*" /> 

                <Button
                    android:id="@+id/btn_jianghao"
                    style="@style/btn_input_amount_style"
                   android:background="@drawable/keyboard_style"
                    android:text="#" />

                

                <Button
                    android:id="@+id/btn_baifenhao"
                    style="@style/btn_input_amount_style"
                   android:background="@drawable/keyboard_style"
                    android:text="%" />
                 <Button
                    android:id="@+id/btn_ding"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="^" />
                  <Button
                    android:id="@+id/btn_yu"
                    style="@style/btn_input_amount_style"
                     android:background="@drawable/keyboard_style"
                    android:text="@string/yu"/>
                   <Button
                    android:id="@+id/btn_zkh"
                    style="@style/btn_input_amount_style"
                     android:background="@drawable/keyboard_style"
                    android:text="(" />
                    <Button
                    android:id="@+id/btn_rkh"
                     android:background="@drawable/keyboard_style"
                    style="@style/btn_input_amount_style"
                    android:text=")" />
            </LinearLayout>
            
                     
                     
                     
               <LinearLayout style="@style/layout_input_amount_style">
                  <Button
                    android:id="@+id/btn_yiersan"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:textColor="#333333"
                    android:layout_marginRight="1dp"
                    android:text="123" 
                    android:background="@drawable/keyboard_style"/>
                

              <Button
                    android:id="@+id/btn_yinhao"
                    style="@style/btn_input_amount_style"
               android:background="@drawable/keyboard_style"
                    android:text=":" />

                <Button
                    android:id="@+id/btn_fenhao"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text=";" />
                 <Button
                    android:id="@+id/btn_s_yin"
                    style="@style/btn_input_amount_style"
                  android:background="@drawable/keyboard_style"
                    android:text='"' />
                  <Button
                    android:id="@+id/btn_wenhao"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="@string/wenhao" />
                   <Button
                    android:id="@+id/btn_juhao"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="。" />
                    <Button
                    android:id="@+id/wancheng"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="完成" />
            </LinearLayout>  
            
         
     </LinearLayout>

    <LinearLayout
        android:id="@+id/num_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="5"
        android:background="@drawable/keyboard_style"
       >
        <LinearLayout
            android:id="@+id/table_num"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:orientation="vertical"
           
            >

            <LinearLayout style="@style/layout_input_amount_style">
                
                <Button
                    android:id="@+id/btn_1"
                    style="@style/btn_input_amount_style"
                     android:background="@drawable/keyboard_style"
                    android:text="1" />

                <Button
                    android:id="@+id/btn_2"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="2" />

                <Button
                    android:id="@+id/btn_3"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="3" />
                 <Button
                    android:id="@+id/btn_huitui"
                    style="@style/btn_input_amount_style"
                   android:background="@drawable/keyboard_style"
                    android:text="删除" />
            </LinearLayout>

            <LinearLayout style="@style/layout_input_amount_style">

                <Button
                    android:id="@+id/btn_4"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="4" />

                <Button
                    android:id="@+id/btn_5"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="5" />

                <Button
                    android:id="@+id/btn_6"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="6" />
                
                 <Button
                    android:id="@+id/btn_qianjin"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                     />
                
            </LinearLayout>

            <LinearLayout style="@style/layout_input_amount_style">

                <Button
                    android:id="@+id/btn_7"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="7" />

                <Button
                    android:id="@+id/btn_8"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="8" />

                <Button
                    android:id="@+id/btn_9"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="9" />
                
                
                <Button
                    android:id="@+id/btn_d"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                     />
                
            </LinearLayout>

            <LinearLayout style="@style/layout_input_amount_style">
              
                <Button
                    android:id="@+id/btn_t"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="符号" />
                
              
                
                <Button
                    android:id="@+id/btn_0"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="0" />
  
                <Button
                    android:id="@+id/btn_dian"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="." />
                
                 <Button
                    android:id="@+id/bt_w"
                    style="@style/btn_input_amount_style"
                    android:background="@drawable/keyboard_style"
                    android:text="完成" />

            </LinearLayout>
            </LinearLayout>



        </LinearLayout>


</LinearLayout>